--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "node-demo",
+  "name": "node-hello",
   "version": "1.0.0",
   "description": "Node.js hello world demo",
   "author": "OpsWorkshop ",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "forever start app.js" ,
+    "stop" : "forever stopall"
   }
 }
