--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "OpsWorkshop ",
   "main": "app.js",
   "scripts": {
-    "start": "forever start app.js" ,
-    "stop" : "forever stopall"
+    "start": "start app.js" ,
+    "stop" : "stopall"
   }
 }
